--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                                 d="m5.71,825.57c1.97,36.67,18.62,76.22,38.59,104.78,2.19,3.13,4.49,6.14,6.89,9.03,30.88,37.14,78.65,54.27,126.99,54.8,41.27.45,82.22-2.71,122.44-12.4,27.71-6.67,54.38-16.23,80.7-27.1,26.71-11.03,51.7-25.58,79.09-35.19,21.63-7.59,44.25-12.76,67.26-12.96,47.36-.41,91.4,19.62,135.29,34.82,74.92,25.93,151.21,36.27,228.93,15.76,27.43-7.24,54.84-18.37,74.52-38.8,23.2-24.09,32.8-59.66,27.62-92.74H5.71Z"
                             />
                         </g>
-                        <g class="desk_portfolio portfolio_btn" data-name="portfolio_modal">
+                        <g class="desk_portfolio portfolio_btn svg_btn" data-name="portfolio_modal">
                             <path
                                 class="cls-15"
                                 d="m322.75,611.31h-50.44c-4.2,0-7.63,3.44-7.63,7.63v26.18c0,4.2,3.44,7.63,7.63,7.63h50.44c4.2,0,7.63-3.44,7.63-7.63v-26.18c0-4.2-3.44-7.63-7.63-7.63Zm1.74,32.22c0,4.2-3.44,7.63-7.63,7.63h-38.65c-4.2,0-7.63-3.44-7.63-7.63v-17.61c0-4.2,3.44-7.63,7.63-7.63h38.65c4.2,0,7.63,3.44,7.63,7.63v17.61Z"
@@ -465,7 +465,7 @@
                                         <path class="cls-6" d="m706.01,422.34l152.34-34.39c6.4-1.49-3.85-.05-1.15-7.24,0,0-168.46-3.27-166.06,33.39.76,11.61,8.46,9.73,14.87,8.24Z" />
                                         <path class="cls-15" d="m699.06,418.93l151.92-35.28c6.4-1.49,13.86-8.58,16.56-15.77l32.23-85.54c2.71-7.19-.32-11.85-6.72-10.36l-151.92,35.28c-6.4,1.49-13.86,8.58-16.56,15.77l-32.23,85.54c-2.71,7.19.32,11.85,6.72,10.36Z" />
                                         <path class="cls-6" d="m732.13,325.87c1.88-5,7.46-9.96,10.83-10.75l148.85-34.56-31.82,84.47c-1.88,5-7.46,9.96-10.83,10.75l-148.85,34.56,31.82-84.47Z" />
-                                        <path class="desk_tablet_screen" d="m733.78,327.86c1.88-5,7.46-9.96,10.83-10.75l146.19-33.89-30.82,81.8c-1.88,5-7.46,9.96-10.83,10.75l-146.23,33.95,30.85-81.87Z" />
+                                        <path class="desk_tablet_screen svg_btn" d="m733.78,327.86c1.88-5,7.46-9.96,10.83-10.75l146.19-33.89-30.82,81.8c-1.88,5-7.46,9.96-10.83,10.75l-146.23,33.95,30.85-81.87Z" />
                                     </g>
                                 </g>
                             </g>
@@ -1146,7 +1146,7 @@
                                 </g>
                             </g>
                         </g>
-                        <g class="desk_ball">
+                        <g class="desk_ball svg_btn">
                             <path
                                 class="cls-8"
                                 d="m904.12,848.36c-5.96,8.96-13.55,16.19-22.11,21.56-1.75,1.1-3.54,2.11-5.36,3.05-10.46,5.39-22.08,8.18-33.8,8.17-2.73,0-5.46-.15-8.19-.46h0c-11.22-1.27-22.3-5.15-32.35-11.83-8.59-5.71-15.59-12.92-20.88-21.05-2.16-3.32-4.04-6.79-5.62-10.38-2.35-5.31-4.05-10.88-5.09-16.57-3.04-16.66-.35-34.38,8.7-49.97h0c.75-1.3,1.55-2.58,2.39-3.85,1.08-1.63,2.22-3.2,3.41-4.72,7.11-9.07,16.01-16.05,25.86-20.79,1.99-.96,4.02-1.82,6.08-2.59,8.65-3.24,17.86-4.83,27.11-4.68,3.25.06,6.51.33,9.75.82h0c10.27,1.56,20.38,5.33,29.6,11.47l.06.04c2.49,1.66,4.84,3.44,7.05,5.33,6.31,5.39,11.52,11.69,15.55,18.57,7.86,13.39,11.27,28.99,9.77,44.41h0c-.35,3.59-.97,7.16-1.85,10.7-1.98,7.9-5.32,15.59-10.09,22.76Z"
