change --> change flex cards containers for grid responsive, also some style for portfolio project cards

--- a/index.html
+++ b/index.html
@@ -1474,49 +1474,47 @@
         <section class="section services_section" id="services_section">
             <div class="section_content">
                 <!--~~TITLE SECTION-->
-                <div class="header_section header_section_services" id="header_section_services">
-                    <div class="swipe_animation_container_full">
-                        <h1 class="title_section animation_up" id="title_services">Servicios</h1>
-                    </div>
-                    <h2 class="subtitle_section">Creando soluciones</h2>
-                    <div class="cards_container cards_service_container">
-                        <article class="card service_card graphic_design_service_card">
-                            <div class="bg_card graphic_design_service_bg">
-                                <img src="https://images.pexels.com/photos/1601773/pexels-photo-1601773.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
-                            </div>
-                            <div class="info_card">
-                                <h2 class="card_title">Diseño Gráfico</h2>
-                                <p class="info">Es necesaria la comunicación gráfica para muchas aréas de negocios/empresas, desde papeleria basica hasta promocionales digitales e impresos, cada necesidad se majeda desde angulos diferentes como originalidad en cada paso de la creación.</p>
-                            </div>
-                        </article>
-                        <article class="card service_card illustration_card">
-                            <div class="bg_card illustration_service_bg">
-                                <img src="./src/img/comic.jpg" loading="lazy" />
-                            </div>
-                            <div class="info_card info_service_card">
-                                <h2 class="card_title">Ilustración</h2>
-                                <p class="info">La creación de pagina web es importante, asi como es importante darle al usuario una buena experiencia, facilidad de uso, y que tu contenido sea mejor visto por tus clientes.</p>
-                            </div>
-                        </article>
-                        <article class="card service_card web_card">
-                            <div class="bg_card web_service_bg">
-                                <img src="https://images.pexels.com/photos/285814/pexels-photo-285814.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
-                            </div>
-                            <div class="info_card">
-                                <h2 class="card_title">Desarrollo Web</h2>
-                                <p class="info">Dentro del desarrollo de programación, darle estilo y formato a las ideas es algo que me apaciona.</p>
-                            </div>
-                        </article>
-                        <article class="card service_card ux_ui_card">
-                            <div class="bg_card illustration_service_bg">
-                                <img src="https://images.pexels.com/photos/196645/pexels-photo-196645.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
-                            </div>
-                            <div class="info_card info_service_card">
-                                <h2 class="card_title">UX/UI</h2>
-                                <p class="info">La creación de pagina web es importante, asi como es importante darle al usuario una buena experiencia, facilidad de uso, y que tu contenido sea mejor visto por tus clientes.</p>
-                            </div>
-                        </article>
-                    </div>
+                <div class="swipe_animation_container_full">
+                    <h1 class="title_section animation_up" id="title_services">Servicios</h1>
+                </div>
+                <h2 class="subtitle_section">Creando soluciones</h2>
+                <div class="cards_container cards_service_container">
+                    <article class="card service_card graphic_design_service_card">
+                        <div class="bg_card graphic_design_service_bg">
+                            <img src="https://images.pexels.com/photos/1601773/pexels-photo-1601773.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
+                        </div>
+                        <div class="info_card">
+                            <h2 class="card_title">Diseño Gráfico</h2>
+                            <p class="info">Es necesaria la comunicación gráfica para muchas aréas de negocios/empresas, desde papeleria basica hasta promocionales digitales e impresos, cada necesidad se majeda desde angulos diferentes como originalidad en cada paso de la creación.</p>
+                        </div>
+                    </article>
+                    <article class="card service_card illustration_card">
+                        <div class="bg_card illustration_service_bg">
+                            <img src="./src/img/comic.jpg" loading="lazy" />
+                        </div>
+                        <div class="info_card info_service_card">
+                            <h2 class="card_title">Ilustración</h2>
+                            <p class="info">La creación de pagina web es importante, asi como es importante darle al usuario una buena experiencia, facilidad de uso, y que tu contenido sea mejor visto por tus clientes.</p>
+                        </div>
+                    </article>
+                    <article class="card service_card web_card">
+                        <div class="bg_card web_service_bg">
+                            <img src="https://images.pexels.com/photos/285814/pexels-photo-285814.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
+                        </div>
+                        <div class="info_card">
+                            <h2 class="card_title">Desarrollo Web</h2>
+                            <p class="info">Dentro del desarrollo de programación, darle estilo y formato a las ideas es algo que me apaciona.</p>
+                        </div>
+                    </article>
+                    <article class="card service_card ux_ui_card">
+                        <div class="bg_card illustration_service_bg">
+                            <img src="https://images.pexels.com/photos/196645/pexels-photo-196645.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
+                        </div>
+                        <div class="info_card info_service_card">
+                            <h2 class="card_title">UX/UI</h2>
+                            <p class="info">La creación de pagina web es importante, asi como es importante darle al usuario una buena experiencia, facilidad de uso, y que tu contenido sea mejor visto por tus clientes.</p>
+                        </div>
+                    </article>
                 </div>
             </div>
         </section>
@@ -2033,8 +2031,8 @@
             <div class="info_card">
                 <h2 class="title"></h2>
                 <h3 class="subtitle">Realizado con:</h3>
-                <div class="icons_project_container margin_bottom"></div>
-                <div class="btn_container margin_bottom">
+                <div class="icons_project_container"></div>
+                <div class="btn_container">
                     <a href="" class="more_btn btn" tabindex="-1" data-link="" target="_blank">
                         <span class="label_btn">Ver Proyecto</span>
                     </a>
