feat --> portfolio search actions ready

--- a/index.html
+++ b/index.html
@@ -150,29 +150,29 @@
                 </button>
                 <div class="lists_container">
                     <div class="list_btns_container">
-                        <button class="btn search_list_btn search_portfolio_list_btn list_btn_active" data-name="all" tabindex="0">
+                        <button class="btn search_list_btn search_portfolio_list_btn list_btn_active" data-name="Todo" tabindex="0">
                             <span class="label_btn">Todo</span>
                             <span class="icon_container">
                                 <svg class="icon_svg arrow_list_icon arrow_portfolio_list_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 16L6 10H18L12 16Z"></path></svg>
                             </span>
                         </button>
                         <div class="btns_container list_container portfolio_list_btns_container">
-                            <button class="btn list_btn list_portfolio_btn first_list_btn" data-name="all" tabindex="0">
+                            <button class="btn list_btn list_portfolio_btn first_list_btn" data-name="Todo" tabindex="0">
                                 <span class="label_btn">Todo</span>
                             </button>
-                            <button class="btn list_btn list_portfolio_btn" data-name="design" tabindex="0">
+                            <button class="btn list_btn list_portfolio_btn" data-name="Diseño" tabindex="0">
                                 <span class="label_btn">Diseño</span>
                             </button>
-                            <button class="btn list_btn list_portfolio_btn" data-name="dev" tabindex="0">
+                            <button class="btn list_btn list_portfolio_btn" data-name="Desarrollo" tabindex="0">
                                 <span class="label_btn">Desarrollo</span>
                             </button>
-                            <button class="btn list_btn list_portfolio_btn" data-name="illustration" tabindex="0">
+                            <button class="btn list_btn list_portfolio_btn" data-name="Ilustración" tabindex="0">
                                 <span class="label_btn">Ilustración</span>
                             </button>
                         </div>
                     </div>
                     <div class="list_btns_container">
-                        <button class="btn search_list_btn search_extra_list_btn list_btn_active" data-name="all" tabindex="0">
+                        <button class="btn search_list_btn search_extra_list_btn list_btn_active" data-name="Todo" tabindex="0">
                             <span class="label_btn">Todo</span>
                             <span class="icon_container">
                                 <svg class="icon_svg arrow_list_icon arrow_extra_list_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 16L6 10H18L12 16Z"></path></svg>
@@ -2040,7 +2040,7 @@
         </article>
     </template>
     <template class="list_btn extra_list_btn_template">
-        <button type="button" class="btn list_btn extra_list_btn" name="">
+        <button type="button" class="btn list_btn extra_list_btn">
             <span class="label_btn"></span>
         </button>
     </template>
