remove git ignores

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!--!GOOGLE FONTS-->
         <link rel="stylesheet" href="./src/css/normalize.css" />
         <link rel="stylesheet" href="./src/css/moderCss.css" />
-        <link rel="stylesheet" href="./src/css/style.css" />
+        <link rel="stylesheet" href="./src/css/style.min.css" />
     </head>
     <body class="dark_theme">
         <svg class="svg_gradients">
