change --> just one wide width

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
         <!-- !PAGE START -->
         <header class="section with_bg hero_section" id="hero_section">
-            <div class="section_content">
+            <div class="section_content content">
                 <div class="bg_section hero_bg"></div>
                 <div class="title_container">
                     <h1>Haciendo<br />ideas<br />realidad</h1>
@@ -364,7 +364,7 @@
         </header>
 
         <nav class="nav_menu">
-            <div class="menu_container">
+            <div class="menu_container content">
                 <button class="icon_container logo_btn">
                     <svg class="johnK_icon_svg" data-name="johnK_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 36.85 24.58">
                         <title>John.K</title>
@@ -445,7 +445,7 @@
         </div>
         <section class="section about_section" id="about_section">
             <div class="bg_section"></div>
-            <div class="section_content flex flex_responsive">
+            <div class="section_content content flex flex_responsive">
                 <div class="about_salute swipe_animation_container_half">
                     <h2 class="title_salute animation_up" id="title_salute">Hola, soy</h2>
                     <h3 class="title_name animation_up" id="title_name">Jonathan Grajeda<span class="title_effect">_</span></h3>
@@ -1471,7 +1471,7 @@
         </section>
 
         <section class="section services_section" id="services_section">
-            <div class="section_content">
+            <div class="section_content content">
                 <!--~~TITLE SECTION-->
                 <div class="swipe_animation_container_full">
                     <h1 class="title_section animation_up" id="title_services">Servicios</h1>
@@ -1518,7 +1518,7 @@
             </div>
         </section>
         <section class="section portfolio_section" id="portfolio_section">
-            <div class="section_content">
+            <div class="section_content content">
                 <div class="swipe_animation_container_full">
                     <h1 class="title_section animation_up" id="title_portfolio">Portafolio</h1>
                 </div>
@@ -1563,7 +1563,7 @@
             </div>
         </div>
         <section class="section skills_section" id="skills_section">
-            <div class="section_content">
+            <div class="section_content content">
                 <div class="swipe_animation_container_full">
                     <h1 class="title_section animation_up" id="title_skills">Herramientas</h1>
                 </div>
@@ -1880,7 +1880,7 @@
         </section>
         <section class="section with_bg contact_section" id="contact_section">
             <div class="bg_section"></div>
-            <div class="section_content">
+            <div class="section_content content">
                 <div class="swipe_animation_container_full">
                     <h1 class="title_section animation_up" id="title_contact">Contacto</h1>
                 </div>
@@ -1919,7 +1919,7 @@
         </section>
 
         <footer class="section legals_section" id="legals_section">
-            <div class="footer_content">
+            <div class="footer_content content">
                 <div class="made_container">
                     <span class="title_footer" id="title_footer_id">Página realizada con:</span>
                     <div class="icons_container">
